app/views/theme/assets/stylesheets/theme.css.scss
@import "base";
@import "footer";
@import "header";
@import "campaign";
@import "homepage";

.navbar{
	margin-bottom:0px;
}
.container,
.navbar-fixed-top .container{
	width:auto;
	max-width: 940px;
	padding:0px 5px;
}

#header .container h1{
	width:auto;
	max-width: 800px;
}

#signin .well{
	width:auto;
	max-width: 400px;
}
#campaign img{
	max-width: 100% !important;
	width:auto !important;
	height:auto !important;
}
#campaign #funding_area #image,
#campaign #funding_area #backing,
#campaign #funding_area #progress_bg,
#campaign #faq ul li,
video{
	max-width:100% !important;
}

#campaign #funding_area #backing{
	margin: 0px;
	padding:20px;
	box-sizing: border-box;
}
#campaign #funding_area .share{
	margin-left:0px;
}

#campaign #funding_area #image{
	height:auto;
}

#campaign #funding_area #backing .stats{
	padding: 0px 10px;
}
.blue_button{
	width:auto;
	padding:15px 20px;
}

#navbar{
  height:auto;
  font-size:15px;
/*  position: fixed;
  width:100%;*/
}
#navbar .navbar-inner{
	min-height: 0;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
	border-radius: 0px;  
}
#navbar li{
  line-height: 25px;
}
#navbar img{
  height:25px;
  width:auto;
}
.dropdown-menu a{
  line-height: normal;
}
.caret, .icon-white{
  vertical-align: middle;
}

#header{
  width: auto;
/*  position: static;
  padding-top:50px;
*/}
#header .container{
	/*position: static;*/
}
.navbar-inner{
	padding-left:0px;
	padding-right:0px;
}
#admin{
	margin-top:0px;
}

#admin h3{
	margin-top:20px;
}
#footer{
	padding:30px 10px;
}

.campaign_actions{
	margin-top:5px;
	background-color: #E0E0E0;
	padding: 6px;
	border-radius: 5px;
	line-height: 25px;
}

.campaign_actions a{
	font-size: 16px;
}

#FormNavBar.nav-tabs{
	margin:0px;
}

#FormNavBar.nav-tabs li{
	padding:5px 10px;
	border-radius: 4px 4px 0px 0px;
	cursor:default;
}

#admin_campaigns[data-active-set=FsBasicInformation] > #FormNavBar li[data-active-set=FsBasicInformation],
#admin_campaigns[data-active-set=FsPaymentDetails] > #FormNavBar li[data-active-set=FsPaymentDetails],
#admin_campaigns[data-active-set=FsRewards] > #FormNavBar li[data-active-set=FsRewards],
#admin_campaigns[data-active-set=FsPageContent] > #FormNavBar li[data-active-set=FsPageContent],
#admin_campaigns[data-active-set=FsComments] > #FormNavBar li[data-active-set=FsComments],
#admin_campaigns[data-active-set=FsCheckout] > #FormNavBar li[data-active-set=FsCheckout],
#admin_campaigns[data-active-set=FsSharingDetails] > #FormNavBar li[data-active-set=FsSharingDetails],
#admin_campaigns[data-active-set=FsPublish] > #FormNavBar li[data-active-set=FsPublish],
#admin_campaigns[data-active-set=FsPaymentMode] > #FormNavBar li[data-active-set=FsPaymentMode],
#admin_campaigns[data-active-set=FsApiEndPoint] > #FormNavBar li[data-active-set=FsApiEndPoint]
{
	color: white;
	background-color: #0088cc;
}

#admin_campaigns fieldset{
	display: none;
}

#admin_campaigns[data-active-set=FsBasicInformation] fieldset[data-active-set=FsBasicInformation],
#admin_campaigns[data-active-set=FsPaymentDetails] fieldset[data-active-set=FsPaymentDetails],
#admin_campaigns[data-active-set=FsRewards] fieldset[data-active-set=FsRewards],
#admin_campaigns[data-active-set=FsPageContent] fieldset[data-active-set=FsPageContent],
#admin_campaigns[data-active-set=FsComments] fieldset[data-active-set=FsComments],
#admin_campaigns[data-active-set=FsCheckout] fieldset[data-active-set=FsCheckout],
#admin_campaigns[data-active-set=FsSharingDetails] fieldset[data-active-set=FsSharingDetails],
#admin_campaigns[data-active-set=FsPublish] fieldset[data-active-set=FsPublish],
#admin_campaigns[data-active-set=FsPaymentMode] fieldset[data-active-set=FsPaymentMode],
#admin_campaigns[data-active-set=FsApiEndPoint] fieldset[data-active-set=FsApiEndPoint]
{
	display: block;
}

#admin #admin_website .field .explanation,
#admin #admin_campaigns .field .explanation,
.field .explanation {
	float: none;
	width:auto;
	border-bottom: solid 1px white;
	padding-bottom: 5px;
}

